AbstractValueTransformer:
Упрощены методы получения параметров
Сокращена логика обработки пустых значений
Улучшена читаемость кода

DateTimeTransformer:

Улучшен метод toString с централизованной логикой
Использование стандартных методов для форматирования
Оптимизирована обработка исключений

BooleanTransformer:

Использование Set.of() для более компактного определения множеств
Упрощена логика трансформации
Оптимизирована обработка параметров

NumberTransformer:

Оптимизирована обработка локалей
Улучшена поддержка различных форматов чисел
Упрощена логика получения форматтеров

EnumTransformer:

Упрощена логика поиска значений перечислений
Оптимизирована обработка параметров
Улучшена логика поиска без учета регистра